# autoflow-chat

./: .env.local.example  .env.staging.local.example  .gitignore  .vercelignore  README.md  autoflow_min_tests.js  instrumentation.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  test_api_chat.js  tsconfig.json
android-staff/: .gitignore  README.md  gradle.properties  settings.gradle.kts  version.properties
app/: globals.css  layout.tsx  page.tsx
components/: AiActionBadge.tsx  ChatInput.tsx  ChatMessages.tsx  Navigation.tsx  RoomParticipantsPanel.tsx
docs/: CHAT_OUT_OF_SCOPE_TODO.md  chat_room_participants.md  cursor_working_rules.md  native-android-fcm-channel.md  native-staff-tts.md  phase-3c-completion-report.md  phase-4-chat-list-abort-investigation.md  project_state.md  supabase-data-api-notes.md  tauri-poc-plan.md  tauri-updater.md
ios-staff/: .gitignore  README.md  project.yml
lib/: aiParser.ts  auth.ts  chatApi.ts  dashboard.ts  directPg.ts  env.ts  formatKST.ts  logger.ts  mock.ts  openai.ts  site.ts  supabase.ts  supabaseMin.ts  types.ts
public/: manifest.json
scripts/: check-soft-delete-env.mjs  front-ops-window-compare.mjs  front-ops-zero-stage.mjs  generate-room-qr.ts  make-guest-qr.mjs  notify-smoke.mjs  query-users-uuid.mjs  seed-staff-accounts.mjs  staff-chat-debug-smoke.mjs  supabase-realtime-check.sql  verify-1h5-ui.mjs  verify-chat-308-integration.mjs  verify-chat-columns.mjs  verify-prod.mjs  (+24 more)
src-tauri/: Cargo.toml  notify-bridge.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+399 files in other folders)
