[package]
name = "app"
version = "0.1.5"
description = "AutoFlow desktop shell"
authors = ["you"]
license = ""
repository = "https://github.com/wooshala/autoflow-chat"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
# Desktop-only PoC: build just an rlib for the binary. The mobile-oriented
# staticlib/cdylib targets are omitted because linking the cdylib (app_lib.dll)
# overflows mingw ld's export table ("export ordinal too large") on windows-gnu.
crate-type = ["rlib"]

[[bin]]
name = "AutoFlow"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
rodio = "0.20"

# Windows: build the OS toast directly so we can force it SILENT (no Windows
# default beep). AutoFlow plays the single selected sound via rodio.
[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
